# ReflecTool

./: .gitignore  ClinicalAgentBench  README.md  pyproject.toml  run.py  test.py  train.py
examples/evaluation/: refine_medqa.sh
examples/optimization/: medqa.sh
reflectool/: utilities.py
reflectool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reflectool/actions/: BaseAction.py  Calculator.py  DrugBank.py  EHRSQL.py  GoogleSearch.py  LongDocRAG.py  MMAction.py  MedRAG.py  Reflection.py  Spacy.py  TrustAction.py  UMLS.py  WikiSearch.py  __init__.py  actions_register.py  tool_README.md
reflectool/agent_prompts/: ClinicalPromptGen.py  ModelPromptGen.py  PromptGen.py  ReflexionPromptGen.py  TrainPromptGen.py  prompt_utils.py
reflectool/agents/: BaseAgent.py  CriticAgent.py  ModelAgent.py  ReflecToolAgent.py  ReflexionAgent.py  TaskAgent.py  TrainAgent.py  __init__.py  agent_utils.py
reflectool/commons/: ProxyContext.py  TaskPackage.py
reflectool/datas/: DataManager.py
reflectool/evaluations/: eval_score.py  eval_utils.py  sql_eval_utils.py
reflectool/logger/: base.py  logger.py  logger_utils.py
reflectool/memory/: Memory.py  memory_utils.py
reflectool/models/: InternVLChat.py  MiniCPM.py  __init__.py  base_model.py  config.yaml  conversations.py  huatuo_vision_model.py  llava_med_pp.py  openai_model.py  vllm_models.py  vllm_serve_models.py
reflectool/train/: action_reflector_optimizer.py  loss.py  optimizer_utils.py  trainer.py
scripts/srun/: base_run.sh  base_run_clinical_w_7b_memory.sh  base_run_clinical_w_memory.sh  (+17 more)
(+60 files in other folders)
