[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflectool"
version = "1.0.0"
description = "REFLECTOOL: Towards Reflection-Aware Tool-Augmented Clinical Agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "bitsandbytes==0.41.0", "tqdm", "openai", "sentence_transformers", "bs4", "googlesearch-python", "rouge_score",
    "faiss-gpu", "google-api-python-client", "privateai_client", "spacy", "llama-index-core", "llama-index-llms-openai", 
    "pyserini", "scispacy", "pyyaml",
    "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "transformers>=4.44.0", "jsonlines",
]

[project.optional-dependencies]
train = ["deepspeed>=0.9.5", "ninja", "wandb"]


[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
